@@ -291,6 +291,9 @@ Library
   compilation in a non-ASCII directory if stdout encoding is ASCII (eg. if
   stdout is not a TTY).
 
+- Issue #1285086: Speed up urllib.parse functions: quote, quote_from_bytes,
+  unquote, unquote_to_bytes.
+
 - Issue #8688: Distutils now recalculates MANIFEST everytime.
 
 - Issue #5099: subprocess.Popen.__del__ no longer references global objects
